...
                    app:layout_constraintTop_toBottomOf="@+id/stats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:listitem="@layout/stat_item" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnMyCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_my_collection"
                    android:drawableStart="@drawable/ic_bag"
                    android:backgroundTint="@color/teal_200"
                    android:layout_marginTop="10dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintStart_toEndOf="@+id/imageDetail"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
...
