<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerGallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectionRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/gallery_item"/>

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:id="@+id/expandableFab"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.ExpandableFab
            android:id="@+id/fabExpandable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:efab_icon="@drawable/ic_add"
            app:efab_iconAnimationRotationDeg="45"
            app:efab_color="@color/purple_500"
            android:layout_margin="10dp"
            android:layout_gravity="bottom|end"/>

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fabOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_camera"
            app:label_text="@string/gallery_other"
            app:fab_color="@color/purple_200"/>

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fabPlush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_camera"
            app:label_text="@string/gallery_plush"
            app:fab_color="@color/purple_200"/>

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fabAmiibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_camera"
            app:label_text="@string/gallery_amiibo"
            app:fab_color="@color/purple_200"/>

    </com.nambimobile.widgets.efab.ExpandableFabLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>